Added offline font

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,4 @@
 @import './base/definitions.scss';
 @import './base/media-queries.scss';
 @import './base/global.scss';
+@import './base/fonts.scss'
