--- a/src/scss/base/global.scss
+++ b/src/scss/base/global.scss
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap');
-
 * {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  font-size: 0.8rem;
+  font-size: 30px;
   font-weight: lighter;
   margin: 0;
   padding: 0;
