--- a/src/renderer/style.module.scss
+++ b/src/renderer/style.module.scss
@@ -2,4 +2,10 @@
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
+  background: url('@/assets/wallpapers/1.jpeg');
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  position: relative;
 }
