--- a/src/renderer/scss/base/colors.scss
+++ b/src/renderer/scss/base/colors.scss
@@ -1,2 +1,8 @@
+//colors
+
 $white: rgb(240, 240, 240);
 $black: rgb(10, 10, 10);
+$blur-white: rgba(255, 255, 255, 0.3);
+
+//shadow
+$default-shadow: 3px 7px 16px -5px rgba(0, 0, 0, 0.75);
