--- a/src/renderer/style.module.scss
+++ b/src/renderer/style.module.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
+  background-repeat: no-repeat;
   background: url('@/assets/wallpapers/1.jpeg');
   display: flex;
   justify-content: center;
