--- a/src/renderer/components/TopMenu/style.module.scss
+++ b/src/renderer/components/TopMenu/style.module.scss
@@ -3,12 +3,33 @@
   top: 0;
   width: 100%;
   height: 50px;
-  background-color: $blur-white;
+  background-color: $white-transparent;
   padding: 5px;
+  display: flex;
+  justify-content: space-between;
 
-  .groupLeft {
+  .groupLeft,
+  .groupRight {
+    height: 100%;
+    .button {
+      height: 100%;
+
+      //   transition: background-color 0.6s ease;
+      //   padding: 5px;
+
+      //   &:hover {
+      //     background-color: rgba(255, 255, 255, 0.3) !important;
+      //   }
+      //   img {
+      //     height: 100%;
+      //   }
+    }
   }
 
+  .groupLeft {
+    left: 0px;
+  }
   .groupRight {
+    right: 0px;
   }
 }
