--- a/src/renderer/components/Window/style.module.scss
+++ b/src/renderer/components/Window/style.module.scss
@@ -1,12 +1,12 @@
 .Window {
   position: absolute;
-  background-color: $blur-white;
+  background-color: $white-transparent;
   min-width: 100px;
   min-height: 100px;
-  border-radius: 5px;
+  border-radius: $radius-default;
   overflow: hidden;
-  box-shadow: $default-shadow;
-  backdrop-filter: blur(4px);
+  box-shadow: $shadow-default;
+  backdrop-filter: $blur-default;
   display: flex;
   justify-content: center;
   align-items: center;
