--- a/src/renderer/scss/base/colors.scss
+++ b/src/renderer/scss/base/colors.scss
@@ -1,8 +1,13 @@
 //colors
 
 $white: rgb(240, 240, 240);
+$white-transparent: rgba(255, 255, 255, 0.3);
 $black: rgb(10, 10, 10);
-$blur-white: rgba(255, 255, 255, 0.3);
+$black-transparent: #0a0a0acc;
+$green: rgb(131, 222, 93);
+$green-transparent: rgba(131, 222, 93, 0.7);
+$red: rgb(234, 71, 71);
+$red-transparent: rgb(234, 71, 71, 0.7);
 
 //shadow
-$default-shadow: 3px 7px 16px -5px rgba(0, 0, 0, 0.75);
+$shadow-default: 3px 7px 16px -5px rgba(0, 0, 0, 0.75);
