--- a/src/renderer/pages/SearchManga/style.module.scss
+++ b/src/renderer/pages/SearchManga/style.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding-top: 50px;
+  max-width: 1000px;
 
   .input {
     width: 90%;
