--- a/src/renderer/scss/base/colors.scss
+++ b/src/renderer/scss/base/colors.scss
@@ -6,6 +6,8 @@ $black: rgb(10, 10, 10);
 $black-transparent: #0a0a0acc;
 $green: rgb(131, 222, 93);
 $green-transparent: rgba(131, 222, 93, 0.7);
+$yellow: rgb(241, 226, 113);
+$yellow-transparent: rgba(241, 226, 113, 0.7);
 $red: rgb(234, 71, 71);
 $red-transparent: rgb(234, 71, 71, 0.7);
 
