--- a/src/renderer/components/Button/style.module.scss
+++ b/src/renderer/components/Button/style.module.scss
@@ -3,8 +3,8 @@ $green: rgba(0, 255, 0, 0.4);
 .Button {
   cursor: pointer;
   position: relative;
-  transition: background-color 0.6s ease, border-color 0.6s ease,
-    opacity 0.6s ease, transform 0.6s ease;
+  transition: $transition-bg-default, border-color 0.6s ease, opacity 0.6s ease,
+    transform 0.6s ease;
   overflow: hidden;
 
   img {
@@ -33,13 +33,14 @@ $green: rgba(0, 255, 0, 0.4);
   }
 
   //Colors
-  // &.green {
-  //   background-color: $green !important;
 
-  //   &:hover {
-  //     opacity: 0.6;
-  //   }
-  // }
+  &.green {
+    background: $green-transparent !important;
+
+    &:hover {
+      background: $green !important;
+    }
+  }
 
   //Themes
   &.pure {
@@ -87,7 +88,7 @@ $green: rgba(0, 255, 0, 0.4);
   &.roundedRectangle {
     border: none;
     box-shadow: 5px 5px 9px -7px rgba(0, 0, 0, 0.6);
-    background-color: $bgWhite;
+    background: $white-transparent;
     border-radius: $radius-default;
 
     img {
@@ -95,11 +96,7 @@ $green: rgba(0, 255, 0, 0.4);
     }
 
     &:hover {
-      background-color: rgba(0, 0, 0, 0.05);
-    }
-
-    &.active {
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: $white;
     }
   }
 
