--- a/src/renderer/components/SearchMangaList/Item/style.module.scss
+++ b/src/renderer/components/SearchMangaList/Item/style.module.scss
@@ -4,9 +4,13 @@
   cursor: pointer;
   display: grid;
   align-items: center;
-  transition: all 0.6s ease;
+  transition: all 0.3s ease;
   grid-template: "TITLE COVER";
   min-height: 200px;
+
+  &:hover {
+    background: $white;
+  }
 
   .name {
     max-width: 350px;
@@ -23,7 +27,6 @@
   }
 
   .cover {
-    width: 1fr;
     height: 100%;
     position: relative;
     grid-area: COVER;
@@ -36,7 +39,6 @@
       padding: 10px 5px;
       box-shadow: $shadow-default;
       background: $white-transparent;
-      backdrop-filter: $blur-default;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -72,4 +74,8 @@
     "TITLE COVER"
     "SYNOPSIS COVER"
     "BUTTON BUTTON";
+
+  &:hover {
+    background: $white-transparent;
+  }
 }
