--- a/src/renderer/pages/SearchManga/style.module.scss
+++ b/src/renderer/pages/SearchManga/style.module.scss
@@ -1,33 +1,31 @@
-.SearchManga {
+.searchManga {
   width: calc(100% - 40px);
   height: calc(100% - 40px);
-  flex-direction: column;
-  justify-content: space-between;
-  padding-top: 50px;
   max-width: 1000px;
 
-  .input {
-    width: 90%;
-    height: 50px;
-    border: none;
-    background-color: $white-transparent;
-    border-radius: $radius-default;
-    padding: 0 20px;
-    font-size: 18px;
-    box-shadow: $shadow-default;
-    background-image: url("assets/magnifying-glass-search.svg");
-    background-repeat: no-repeat;
-    background-position: right;
-    background-origin: content-box;
-    background-size: 30px;
-  }
+  .content {
+    flex-direction: column;
+    .input {
+      width: 90%;
+      margin: 20px;
+      height: 50px;
+      border: none;
+      background-color: $white-transparent;
+      border-radius: $radius-default;
+      padding: 0 20px;
+      font-size: 18px;
+      box-shadow: $shadow-default;
+      background-image: url("assets/magnifying-glass-search.svg");
+      background-repeat: no-repeat;
+      background-position: right;
+      background-origin: content-box;
+      background-size: 30px;
+    }
 
-  .result {
-    height: 100%;
-    width: 100%;
-    max-height: calc(100% - 80px);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    .result {
+      width: 100%;
+      max-height: calc(100% - 90px);
+      flex-grow: 1;
+    }
   }
 }
